# dioxus-daisy-auth-i18n-start

./: .gitignore  .prettierrc  Cargo.toml  Dioxus.toml  LICENSE  README.md  docker-compose.yaml  package.json  tailwind.css
assets/: tailwind.css
assets/styling/: blog.css  echo.css  main.css
migrations/: 01-init.sql
src/: app.rs  i18n.rs  main.rs
src/backend/: errors.rs  mod.rs  otlp.rs  user.rs
src/backend/auth/: authz.rs  mod.rs
src/components/: alert.rs  echo.rs  hero.rs  mod.rs  theme_control.rs
src/locales/: en-US.ftl  pt-PT.ftl
src/shared/: mod.rs  user.rs
src/views/: blog.rs  layout.rs  mod.rs  navbar.rs
src/views/user/: components.rs  create.rs  login.rs  mod.rs  settings.rs
