[package]
name = "dioxus-daisy-auth-i18n-start"
version = "0.1.0"
authors = ["dvdmgl <dvdmgl@gmail.com>"]
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
dioxus = { version = "0.6", features = ["router", "fullstack"] }
dioxus-cli-config = { version = "0.6", optional = true }
dioxus-fullstack = { version = "0.6.3", optional = true }
dioxus-i18n = "0.4.3"
thiserror = "2"
tracing = { version = "0.1" }

# server
axum = { version = "0.7", features = ["macros"], optional = true }
axum-login = { version = "0.16.0", optional = true }
axum-extra = { version = "0.10.1", features = [
    "cookie-private",
    "typed-header",
], optional = true }

# database
deadpool-postgres = { version = "0.14", features = [
    "rt_tokio_1",
], optional = true }
tokio-postgres = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
postgres-types = { version = "0.2.9", features = [
    "derive",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
], optional = true }

dotenvy = { version = "0.15.7", optional = true }
argon2 = { version = "0.5", optional = true }
web-sys = { version = "0.3.77", optional = true }
validator = { version = "0.20", features = ["derive"] }


[features]
default = ["web"]
# default = ["server"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "dep:web-sys"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop", "dep:web-sys"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile", "dep:web-sys"]

server = [
    "dioxus/server",
    "dep:tokio",
    "dep:deadpool-postgres",
    "dep:tokio-postgres",
    "dep:postgres-types",
    "dep:dotenvy",
    "dep:argon2",
    "dep:axum",
    "dep:axum-extra",
    "dep:axum-login",
    "dep:dioxus-cli-config",
    "dep:dioxus-fullstack",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
